--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
